--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ bevy-inspector-egui = "0.32.0"
 bevy_save = "1.0.0"
 avian3d = "0.3"
 bevy_rapier3d = { version = "0.31.0", features = ["debug-render-3d"] }
+bevy_enhanced_input = "0.16.0"
